feat: add page router

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,8 @@
 @import 'style/var';
 @import 'style/style';
 @import 'style/header';
+@import 'style/main';
+@import 'style/product';
 
 .wrapper {
   max-width: 1300px;
