--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,13 +1,50 @@
 .main {
   display: flex;
   padding: 1%;
-  justify-content: space-between;
-  &__sort{
+  &__filters {
+    flex: 1;
+    margin-right: 1%;
 
   }
   &__items{
-      display:flex;
-      justify-content: space-around;
-      color: white;
+    flex: 2;
+    display:flex;
+    justify-content: space-around;
+    color: white;
+    flex-direction: column;
   }
+}
+.items {
+
+  &__sorts {
+
+  }
+  &__cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+  }
+}
+.row {
+  flex-direction: row;
+}
+.column {
+      flex-direction: column;
+}
+.card{
+  display: flex;
+  &__image {
+    width: 100px;
+
+  }
+    &__img {
+      max-width: 100%;
+
+  }
+}
+
+.button {
+  width: 70px;
+  height: 40px;
 }
