--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,6 +1,9 @@
 .main {
-  display: flex;
+  margin: 0 auto;
+  &__container {
+    display: flex;
   padding: 1%;
+  }
   &__filters {
     flex: 1;
     margin-right: 1%;
