--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,5 +1,4 @@
-$back: rgb(41, 41, 9);
-$text: rgb(212, 166, 166);
-
-
-
+$back: #E5E5E5;
+$back-card:#FFFFFF;
+$text: rgba(63, 78, 101, 1);
+$but: rgba(255, 200, 94, 1);
