--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,5 +1,5 @@
 .main {
-  margin: 0 auto;as
+  margin: 0 auto;
   &__container {
     display: flex;
   padding: 1%;
@@ -50,4 +50,7 @@
 .button {
   width: 70px;
   height: 40px;
+  &__row {
+
+  }
 }
