--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 button {
     background-color: $but;
     display: flex;
@@ -17,9 +21,6 @@ button {
     }
 }
 
-// .button__row button {
-//     background-image: url(../img/row.svg);
-// }
 .main {
     margin: 0 auto;
     &__container {
@@ -61,7 +62,7 @@ button {
             width: 13%;
             height: 40px;
             margin-right: 10px;
-            background: linear-gradient(90deg, rgba(255, 198, 80, 0.3) 0%, rgba(254, 202, 110, 0.3) 97.25%);
+            background: $but;
             border-radius: 1000px;
         }
         .button-vie {
@@ -119,8 +120,9 @@ button {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 44%;
-        margin-left: 5%;
+        height: 50%;
+        margin-left: 20px;
+        margin-top: 10px;
     }
     &__about::nth-child() {
         margin: 0;
@@ -133,4 +135,17 @@ button {
     }
 }
 
-.cards__item {}
+.column {
+    .card {
+        flex-direction: row;
+        width: 60%;
+        height: 250px;
+        .card__image {
+            width: 60%;
+            height: 100%;
+        }
+        .card__about-act {
+            height: 90%;
+        }
+    }
+}
