feat: add sort functions

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -54,7 +54,7 @@ button {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 10;
+        gap: 10px;
     }
 }
 
