fix: layout but

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -68,7 +68,7 @@
     }
     &__count {
         position: absolute;
-        right: 6%;
+        right: 13px;
         width: 30px;
         height: 30px;
         border-radius: 50%;
