--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -16,9 +16,6 @@ button {
     padding: 10px 19px;
     color: white;
     border: none;
-    &:hover {
-        cursor: pointer;
-    }
 }
 
 .main {
@@ -64,6 +61,10 @@ button {
             margin-right: 10px;
             background: $but;
             border-radius: 1000px;
+            &:hover {
+                cursor: pointer;
+                background-color: $but-hov;
+            }
         }
         .button-vie {
             width: 5%;
@@ -71,6 +72,10 @@ button {
             margin-left: 10px;
             background: linear-gradient(90deg, rgba(255, 198, 80, 0.3) 0%, rgba(254, 202, 110, 0.3) 97.25%);
             border-radius: 1000px;
+            &:hover {
+                cursor: pointer;
+                background-color: $but-hov;
+            }
         }
         .button__row {
             margin-left: 30px;
