--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -91,14 +91,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 20px;
+    margin-bottom: 20px;
     .logo-footer {
         width: 70px;
+        margin-right: 20px;
     }
     .git-a {
         color: $text;
         font-size: 1.3rem;
+        margin-left: 20px;
     }
 }
 
