--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -4,3 +4,4 @@ $back-input:#EDEDED;
 $text: rgba(63, 78, 101, 1);
 $but: rgba(255, 200, 94, 1);
 $but-hov: #E47209;
+$filter: brightness(0) saturate(100%) invert(94%) sepia(100%) saturate(4572%) hue-rotate(311deg) brightness(101%) contrast(106%);;
