--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,10 @@
 .wrapper {
   max-width: 1300px;
   margin: 0 auto;
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .block {
   display:block;
@@ -18,3 +22,4 @@
   justify-content:space-between;
   gap: 1%;
 }
+
