--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -16,6 +16,11 @@ button {
     padding: 10px 19px;
     color: white;
     border: none;
+    transition: all 0.7s;
+    cursor: pointer;
+    &:hover {
+      background-color: $but-hov;
+  }
 }
 
 .main {
@@ -44,9 +49,13 @@ button {
         flex-direction: row;
         margin-bottom: 10px;
         font-size: 16px;
+        @media (max-width: 1050px) {
+          flex-wrap: wrap;
+        }
         .input-search {
             height: 40px;
             background: $back-input;
+            outline: none;
             border: none;
             border-radius: 36px;
             display: flex;
@@ -54,6 +63,10 @@ button {
             justify-content: space-between;
             align-items: center;
             padding-left: 20px;
+            cursor: pointer;
+            &:active, &:focus {
+                border: 1px solid $but;
+            }
         }
         .button {
             width: 13%;
@@ -110,17 +123,25 @@ button {
     border: 0.1px solid $but;
     margin-right: 10px;
     margin-top: 10px;
+    cursor: pointer;
+    &:hover {
+      background-color: $back;
+    }
     &__image {
         width: 100%;
         height: 40%;
         margin-bottom: 10px;
         overflow: hidden;
-        cursor: pointer;
+          transition: transform 0.7s;
+        &:hover {
+          transition: all 0.7s;
+          transform: scale(1.1);
+        }
     }
     &__img {
         max-width: 100%;
         min-height: 100%;
-    }
+      }
     &__about-act {
         display: flex;
         flex-direction: column;
