--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -1,130 +1,156 @@
-.header {
-    padding: 1%;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    &__info {
-        // flex: 2;
+    .header {
+        padding: 1%;
         display: flex;
-        a {
+        justify-content: space-between;
+        position: relative;
+        &__info {
+            // flex: 2;
             display: flex;
-            flex-direction: row;
+            a {
+                display: flex;
+                flex-direction: row;
+                text-decoration: none;
+                color: $text;
+                transition: all 0.7s;
+                &:hover {
+                    transform: scale(1.05);
+                    text-decoration: none;
+                }
+            }
+        }
+        &__logo {
+            width: 80px;
+            margin-right: 4%;
+            @media (max-width: 600px) {
+                width: 50px;
+            }
+        }
+        &__title {
+            font-size: 1.5rem;
             text-decoration: none;
-            color: $text;
+            width: 155px;
+            transition: all 0.7s;
+            &:hover {
+                text-decoration: none;
+                color: $but-hov;
+            }
+            @media (max-width: 600px) {
+                font-size: 0.8rem;
+                width: 85px;
+            }
+        }
+        &__basket {
+            cursor: pointer;
+            transition: all 0.7s;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
-    &__logo {
-        width: 80px;
-        margin-right: 4%;
-    }
-    &__title {
-        font-size: 1.5rem;
-        text-decoration: none;
-        width: 155px;
-        &:hover {
-          color: $but-hov;
-          text-decoration: underline;
-        }
-        @media (max-width: 600px) {
-            font-size: 0.8rem;
-        }
-    }
-    &__basket {
-        cursor: pointer;
-    }
-}
-
-.header::after {
-    content: '';
-    position: absolute;
-    top: 95px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: rgb(63, 78, 101);
-    opacity: 0.2;
-}
-
-.price {
-    // flex: 2;
-    width: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @media (max-width: 600px) {
-        flex-direction: column;
-    }
-    &__text {
-        margin-right: 1%;
-    }
-    &__total {}
-}
-
-.basket {
-    // flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
-    margin: 1%;
-    &__link {}
-    &__img {
-        width: 90px;
-    }
-    &__count {
+    
+    .header::after {
+        content: '';
         position: absolute;
-        right: 13px;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        background: #FFC85E;
-        border: 3px solid #FFFFFF;
+        top: 95px;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: rgb(63, 78, 101);
+        opacity: 0.2;
     }
-    &__num {
-        font-size: 1.5rem;
-        font-weight: 700;
-        color: white;
-        margin: 0;
-        margin-left: 8px;
+    
+    .price {
+        // flex: 2;
+        width: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @media (max-width: 600px) {
+            flex-direction: column;
+        }
+        &__text {
+            margin-right: 1%;
+        }
+        &__total {}
     }
-}
-.footer {
-  margin-top: auto;
-}
-.footer-container {
-    position: relative;
-    border-top: rgba(63, 78, 101, 0.2);
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    .logo-footer {
-        width: 70px;
-        margin-right: 20px;
-        &:hover {
-          filter: $filter;
-      }
-    }
-    .git-a {
-        color: $text;
-        font-size: 1.3rem;
-        margin-left: 20px;
-        &:hover {
-          color: $but-hov;
-          text-decoration: underline;
+    
+    .basket {
+        // flex: 1;
+        display: flex;
+        justify-content: flex-end;
+        position: relative;
+        margin: 1%;
+        &__link {}
+        &__img {
+            width: 90px;
+        }
+        &__count {
+            position: absolute;
+            right: 13px;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            background: #FFC85E;
+            border: 3px solid #FFFFFF;
+            @media (max-width: 600px) {
+                width: 20px;
+                height: 20px;
+                right: 8px;
+            }
+        }
+        &__num {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: white;
+            margin: 0;
+            margin-left: 8px;
+            @media (max-width: 600px) {
+                font-size: 1.1rem;
+                font-weight: 700;
+                margin-left: 5px;
+            }
         }
     }
-}
-
-.footer-container::after {
-    content: "";
-    position: absolute;
-    bottom: 45px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: rgb(63, 78, 101);
-    opacity: 0.2;
-}
+    
+    .footer {
+        margin-top: auto;
+    }
+    
+    .footer-container {
+        position: relative;
+        border-top: rgba(63, 78, 101, 0.2);
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        .logo-footer {
+            width: 70px;
+            margin-right: 20px;
+            &:hover {
+                filter: $filter;
+            }
+        }
+        .git-a {
+            color: $text;
+            font-size: 1.3rem;
+            margin-left: 20px;
+            &:hover {
+                color: $but-hov;
+                text-decoration: underline;
+            }
+        }
+    }
+    
+    .footer-container::after {
+        content: "";
+        position: absolute;
+        bottom: 45px;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: rgb(63, 78, 101);
+        opacity: 0.2;
+    }
