--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -19,12 +19,14 @@ button {
     transition: all 0.7s;
     cursor: pointer;
     &:hover {
-      background-color: $but-hov;
-  }
+        background-color: $but-hov;
+    }
 }
+
 .active-btn {
     background-color: $but-hov;
 }
+
 .main {
     margin: 0 auto;
     &__container {
@@ -33,7 +35,7 @@ button {
         flex-direction: row;
         justify-content: space-between;
         @media (max-width: 950px) {
-          flex-direction: column;
+            flex-direction: column;
         }
     }
     &__filters {
@@ -59,8 +61,8 @@ button {
         margin-bottom: 10px;
         font-size: 16px;
         @media (max-width: 1050px) {
-          flex-wrap: wrap;
-          row-gap: 5px;
+            flex-wrap: wrap;
+            row-gap: 5px;
         }
         .input-search {
             height: 40px;
@@ -74,7 +76,8 @@ button {
             align-items: center;
             padding-left: 20px;
             cursor: pointer;
-            &:active, &:focus {
+            &:active,
+            &:focus {
                 border: 1px solid $but;
             }
         }
@@ -109,16 +112,17 @@ button {
         flex-direction: row;
         flex-wrap: wrap;
         width: 100%;
-
     }
 }
+
 .items__cards {
-  @media (max-width: 950px) {
-    width: 100%;
-    margin: 0 auto;
-    justify-content: center;
+    @media (max-width: 950px) {
+        width: 100%;
+        margin: 0 auto;
+        justify-content: center;
+    }
 }
-}
+
 .row {
     flex-direction: row;
 }
@@ -142,23 +146,23 @@ button {
     margin-top: 10px;
     cursor: pointer;
     &:hover {
-      background-color: $back;
+        background-color: $back;
     }
     &__image {
         width: 100%;
         height: 40%;
         margin-bottom: 10px;
         overflow: hidden;
-          transition: transform 0.7s;
+        transition: transform 0.7s;
         &:hover {
-          transition: all 0.7s;
-          transform: scale(1.1);
+            transition: all 0.7s;
+            transform: scale(1.1);
         }
     }
     &__img {
         max-width: 100%;
         min-height: 100%;
-      }
+    }
     &__about-act {
         display: flex;
         flex-direction: column;
@@ -188,7 +192,39 @@ button {
             height: 100%;
         }
         .card__about-act {
+            width: 40%;
             height: 90%;
         }
     }
+}
+
+.items__filters {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.filter {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid $but;
+    border-radius: 20px;
+    background-color: $back-input;
+    overflow: hidden;
+    padding: 10px;
+    padding-right: 0;
+}
+
+.input-checkbox-block {
+    display: flex;
+    flex-direction: column;
+    height: 210px;
+    overflow-y: scroll;
+}
+
+.input-checkbox-text {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
 }
