--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -44,7 +44,7 @@ button {
     }
     &__items {
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         color: $text;
         flex-direction: column;
         width: 80%;
