--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -170,8 +170,7 @@ button {
         flex-direction: column;
         justify-content: space-between;
         height: 50%;
-        margin-left: 20px;
-        margin-top: 10px;
+        margin: 10px 5px 0 20px;
     }
     &__about::nth-child() {
         margin: 0;
@@ -181,14 +180,17 @@ button {
         width: 150px;
         height: 45px;
         border-radius: 80px;
+        @media (max-width: 530px) {
+          width: 130px;
+        }
     }
-}
-
+  }
 .column {
     .card {
         flex-direction: row;
-        width: 60%;
+        width: 90%;
         height: 250px;
+        margin: 10px auto;
         .card__image {
             width: 60%;
             height: 100%;
@@ -230,4 +232,40 @@ button {
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
+    cursor: pointer;
+    margin-bottom: 2%;
+    gap: 2%;
+
+}
+
+.filters-buttons {
+  display: flex;
+  justify-content: space-around;
+  gap: 2%;
+
+}
+.button__reset,
+.button__copy {
+  flex: 1;
+  padding: 5px 7px;
+  background: rgb(255, 200, 94);
+  border-radius: 5px;
+  &:hover {
+    background-color: $but-hov;
+  }
+}
+.button.active-btn {
+  background-color: $but-hov;
+}
+// .items__sorts .button-vie.active {
+//     background-color: $but-hov;
+// }
+.button__column.button-vie.active {
+  background-color: $but-hov;
+}
+.button__row.button-vie.active {
+  background-color: $but-hov;
+}
+.active {
+    background-color: $but-hov;
 }
