--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -29,6 +29,7 @@ button {
 
 .main {
     margin: 0 auto;
+    width: 100%;
     &__container {
         display: flex;
         padding: 1%;
@@ -181,10 +182,11 @@ button {
         height: 45px;
         border-radius: 80px;
         @media (max-width: 530px) {
-          width: 130px;
+            width: 130px;
         }
     }
-  }
+}
+
 .column {
     .card {
         flex-direction: row;
@@ -235,37 +237,40 @@ button {
     cursor: pointer;
     margin-bottom: 2%;
     gap: 2%;
-
 }
 
 .filters-buttons {
-  display: flex;
-  justify-content: space-around;
-  gap: 2%;
-
+    display: flex;
+    justify-content: space-around;
+    gap: 2%;
 }
+
 .button__reset,
 .button__copy {
-  flex: 1;
-  padding: 5px 7px;
-  background: rgb(255, 200, 94);
-  border-radius: 5px;
-  &:hover {
-    background-color: $but-hov;
-  }
+    flex: 1;
+    padding: 5px 7px;
+    background: rgb(255, 200, 94);
+    border-radius: 5px;
+    &:hover {
+        background-color: $but-hov;
+    }
 }
+
 .button.active-btn {
-  background-color: $but-hov;
+    background-color: $but-hov;
 }
+
 // .items__sorts .button-vie.active {
 //     background-color: $but-hov;
 // }
 .button__column.button-vie.active {
-  background-color: $but-hov;
+    background-color: $but-hov;
 }
+
 .button__row.button-vie.active {
-  background-color: $but-hov;
+    background-color: $but-hov;
 }
+
 .active {
     background-color: $but-hov;
 }
