feat: add and remove products from basket

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 @import 'style/header';
 @import 'style/main';
 @import 'style/product';
+@import 'style/basket';
 
 .wrapper {
   max-width: 1300px;
