feat: add promo codes to basket

--- a/src/style/_basket.scss
+++ b/src/style/_basket.scss
@@ -5,7 +5,7 @@
   gap: 1%;
 }
 .basket-items {
-  width: 70%;
+
 }
 .basket-item {
   margin: 0 auto;
@@ -16,18 +16,22 @@
 
 }
 
+
 .basket-item__num {
 font-weight: 700;
   padding-top: 2%;
 }
 .basket-item__image {
   flex: 0 0 200px;
+
   @media (max-width: 800px) {
     flex: 0 0 100px;
   }
 }
 .basket-item__img {
   max-width: 100%;
+  border: 1px solid $but;
+  border-radius: 2%;
 }
 .basket__about {
     display: flex;
@@ -84,17 +88,121 @@ align-items: center;
 .basket-item__price {
 }
 
+
 @media (max-width: 700px) {
   .basket__container {
     margin-top: 30px;
+    flex-direction: column;
+    align-items: center;
   }
+  .basket__summary {
+    order: 1;
+  }
+.basket-items {
+      order: 2;
+}
   .basket-item {
     width: 95%;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 10px;
   }
   .basket-item__img {
     max-width: 90%;
   }
 
   }
+  .basket__summary {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  .summary {
+    display: flex;
+    padding: 5%;
+    flex-direction: column;
+    align-items: center;
+    gap: 2%;
+    font-weight: 700;
+    font-size: 1rem;
+    border: 2px dotted $but-hov;
+    border-radius: 5%;
+    background-color: #FFE4B5;
+  }
+  .summary__title {
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+  }
+  .summary__products {
+    margin-bottom: 5px;
+  }
+  .summary__price {
+    margin-bottom: 10px;
+  }
+  .summary__input {
+    margin-bottom: 10px;
+    max-width: 95%;
+    outline: none;
+    height: 30px;
+  }
+  .summary__promo {
+  }
+  .button {
+    width: 85px;
+    height: 35px;
+    border-radius: 15px;
+    &:active,
+    &:hover {
+      background-color: $but-hov;
+    }
+  }
+  .summary__button {
+  }
+
+  .summary__sh {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2%;
+    border: 2px dotted $but-hov;
+    border-radius: 5%;
+    margin-bottom: 5px;
+    width: 95%;
+    padding: 2%;
+
+  }
+  .summary__sh-promo {
+  }
+  .button-sh {
+    width: 60px;
+    cursor: pointer;
+  }
+  .summary__win {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2%;
+    border: 2px dotted $but-hov;
+    border-radius: 5%;
+    margin-bottom: 5px;
+    width: 95%;
+    padding: 2%;
+  }
+  .summary__win-promo {
+  }
+  .button-win {
+        width: 60px;
+        cursor: pointer;
+  }
+
+  .hidden {
+    opacity: 0;
+    visibility: 0;
+    }
+  .visible {
+  opacity: 1;
+    visibility: visible;
+  }
+.add {
+  background-color: $but-hov;
+}
