fix: remove priducts and price from header

--- a/src/style/_basket.scss
+++ b/src/style/_basket.scss
@@ -116,6 +116,7 @@ align-items: center;
     display: flex;
     justify-content: center;
     width: 100%;
+    height: max-content;
   }
   .summary {
     display: flex;
