feat: add modal window in basket

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 @import 'style/main';
 @import 'style/product';
 @import 'style/basket';
-
+@import 'style/buy-window';
 .wrapper {
   max-width: 1300px;
   margin: 0 auto;
