--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -287,21 +287,14 @@ button {
     background-color: $but-hov;
 }
 
-<<<<<<< HEAD======= // .items__sorts .button-vie.active {
-//     background-color: $but-hov;
-// }
->>>>>>>23ced4f (fix: layout product) .button__column.button-vie.active {
-    background-color: $but-hov;
-}
-
-<<<<<<< HEAD .no-card {
+.no-card {
     margin: 0 auto;
     font-size: 1.5rem;
     font-weight: 700;
     padding-top: 5%;
 }
 
-=======.button__row.button-vie.active {
+.button__row.button-vie.active {
     background-color: $but-hov;
 }
 
@@ -309,7 +302,7 @@ button {
     background-color: $but-hov;
 }
 
->>>>>>>23ced4f (fix: layout product) .no-card {
+.no-card {
     margin: 0 auto;
     font-size: 1.5rem;
     font-weight: 700;
