feat: add to card done

--- a/src/style/_product.scss
+++ b/src/style/_product.scss
@@ -24,8 +24,9 @@
     margin-top: 10px;
     background: $back-input;
     a {
-        color: $but;
+        color: $but-hov;
         padding: 10px;
+        font-weight: 700;
     }
     p {
         color: $but;
