--- a/src/style/_product.scss
+++ b/src/style/_product.scss
@@ -104,6 +104,7 @@
             border-radius: 10px;
             overflow: hidden;
             width: 80%;
+            max-height: 400px;
             @media (max-width: 550px) {
                 width: 100%;
             }
