--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -318,7 +318,7 @@ button {
 
 .rangeValues {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-around;
     // margin: 0px 10px;
